<resources>
    <string name="app_name">GroceryGo</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_image">User_profile_Image</string>
    <string name="dummy_username">Hey, Michael</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="top_items">Top Items</string>
    <string name="view_all">view all</string>
    <string name="quantity_kg">KG</string>
    <string name="currency_rs">$</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
    </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="no_items_in_this_category">No Items in this category</string>
    <string name="my_cart">My Cart</string>
    <string name="check_out">Check Out</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="create_account">Create Account</string>

</resources>